--- a/Mockup(HTMLCSS)/src/budget.html
+++ b/Mockup(HTMLCSS)/src/budget.html
@@ -27,54 +27,59 @@
     <main class="container mx-auto p-4 flex flex-col justify-center">
         <div class="flex items-center justify-between">
             <h1 class="text-2xl font-bold mb-4 text-fuchsia-600">Your Budget Planing</h1>
-            <a href="create-budget.html" class="flex items-center justify-between text-xl font-bold hover:text-white w-1/5 py-4 px-4 rounded-xl mb-4 bg-fuchsia-600 opacity-90">
-                <div class="w-8 h-8"><img src="img/plusbutton.png" alt="plus"></div>
-                <span >Create Expense Plan</span>
+            <a href="create-budget.html" class="flex items-center justify-between text-xl font-bold hover:bg-blue-700 text-white w-3/5 py-4 px-4 rounded-xl mb-4 bg-pink-400 opacity-90">
+                <img src="img/plusbutton.png" alt="plus" class="w-6">Create Plan
             </a>
         </div>
 
         <!--List of Created Expense Plan-->
-        <div>
+        <div class="container rounded-xl bg-violet-950 opacity-90 relative flex flex-col justify-between mb-4 overflow-hidden p-4">
             <ul class="space-y-5">
-                <div class="w-full py-0 px-4 rounded-xl mb-4 bg-fuchsia-600 opacity-90">
-                    <li>
-                        <div class="flex items-center justify-between">
-                            <img src="img/expense.png" alt="expense" class="w-14 h-14 absolute align-middle">
-                            <details class="relative">
-                                <summary class="p-4 w-1/2 ml-12 text-xl font-bold hover:text-white">Monthly Grocery Consumption</summary>
-                                <p class="px-24">Category: Hygiene</p>
-                                <p class="px-24">Start Date: 2023-10-1</p>
-                                <p class="px-24">End Date: 2023-10-31</p>
-                                <p class="px-24">Current Spending: $790</p>
-                                <p class="px-24">Max. Spending: $1000</p>
-                                <p class="px-24">Note: </p>
-                            </details>
-                            <img src="img/79.png" alt="progress" class="max-h-52 w-1/2">
-                        </div>
-                    </li>
-                </div>
-                <div class="w-full py-4 px-4 rounded-xl mb-4 bg-fuchsia-600 opacity-90">
-                    <li>
-                        <div class="flex items-center justify-between">
-                            <img src="img/expense.png" alt="expense" class="w-14 h-14 absolute align-middle">
-                            <details class="relative">
-                                <summary class="p-4 w-1/2 ml-12 text-xl font-bold hover:text-white">Seasonal Fashion Expense</summary>
-                            </details>
-                            <img src="img/26.png" alt="progress" class="max-h-52 w-1/2">
-                        </div>
-                    </li>
-                </div>
-                <div class="w-full py-4 px-4 rounded-xl mb-4 bg-fuchsia-600 opacity-90">
-                    <li>
-                        <div class="flex items-center justify-between">
-                            <img src="img/expense.png" alt="expense" class="w-14 h-14 absolute align-middle">
-                            <details class="relative">
-                                <summary class="p-4 w-1/2 ml-12 text-xl font-bold hover:text-white ">Entertainment Cost</summary>
-                            </details>
-                            <img src="img/96.png" alt="progress" class="max-h-52 w-1/2">
-                        </div>
-                    </li>
-                </div>
+                <li class="container relative flex items-center justify-evenly py-0 rounded-xl mb-4 bg-pink-400 opacity-90">
+                    <details class="relative w-full">
+                        <summary class="flex items-center justify-between text-xl font-bold">
+                            <img src="img/expense.png" alt="expense" class="w-8">
+                            Monthly Grocery Consumption
+                            <img src="img/79.png" alt="progress" class="w-32">
+                        </summary>
+                        <p class="ml-12">Category: Hygiene</p>
+                        <p class="ml-12">Start Date: 2023-10-1</p>
+                        <p class="ml-12">End Date: 2023-10-31</p>
+                        <p class="ml-12">Used Spending: $790</p>
+                        <p class="ml-12">Max. Spending: $1000</p>
+                        <p class="ml-12">Note: </p>
+                    </details>
+                </li>
+                <li class="container relative flex items-center justify-evenly py-0 rounded-xl mb-4 bg-pink-400 opacity-90">
+                    <details class="relative w-full">
+                        <summary class="flex items-center justify-between text-xl font-bold">
+                            <img src="img/expense.png" alt="expense" class="w-8">
+                            Seasonal Fashion Expense
+                            <img src="img/26.png" alt="progress" class="w-32">
+                        </summary>
+                        <p class="ml-12">Category: Clothing</p>
+                        <p class="ml-12">Start Date: 2023-9-1</p>
+                        <p class="ml-12">End Date: 2023-9-30</p>
+                        <p class="ml-12">Used Spending: $130</p>
+                        <p class="ml-12">Max. Spending: $500</p>
+                        <p class="ml-12">Note: **For Stampede**</p>
+                    </details>
+                </li>
+                <li class="container relative flex items-center justify-evenly py-0 rounded-xl mb-4 bg-pink-400 opacity-90">
+                    <details class="relative w-full">
+                        <summary class="flex items-center justify-between text-xl font-bold">
+                            <img src="img/expense.png" alt="expense" class="w-8">
+                            Entertainment Cost
+                            <img src="img/96.png" alt="progress" class="w-32">
+                        </summary>
+                        <p class="ml-12">Category: Entertainment</p>
+                        <p class="ml-12">Start Date: 2023-9-1</p>
+                        <p class="ml-12">End Date: 2023-9-30</p>
+                        <p class="ml-12">Used Spending: $288</p>
+                        <p class="ml-12">Max. Spending: $300</p>
+                        <p class="ml-12">Note: </p>
+                    </details>
+                </li>
             </ul>
         </div>
     </main>
