--- a/Mockup(HTMLCSS)/src/create-budget.html
+++ b/Mockup(HTMLCSS)/src/create-budget.html
@@ -10,7 +10,7 @@
     <!-- Sub-menu (top tabs) -->
     <nav class="bg-violet-800 h-14">
         <div class="container mx-auto flex justify-evenly h-full">
-            <a href="category.html" class="w-1/2 hover:text-white text-fuchsia-400 bg-violet-900">
+            <a href="budget.html" class="w-1/2 hover:text-white text-fuchsia-400 bg-violet-900">
                 <div class=" px-4 py-2 text-center h-full">
                     Expenses 
                 </div>
@@ -25,31 +25,30 @@
 
     <!-- Main Content -->
     <main class="container mx-auto p-4 flex flex-col justify-center">
-        <h1 class="text-2xl font-bold mb-4 text-fuchsia-600">Create Expense Plan</h1>
-        
+        <h1 class="text-2xl font-bold mb-4 text-fuchsia-600">Create Expense/Saving Plan</h1>
         <div>
             <label class="text-lg mb-4 text-fuchsia-400" for="planName">Plan Name</label>
             <input class="w-full py-4 px-4 rounded-xl mb-4 opacity-90" type="text" name="planName">
-            <br/>
             <label class="text-lg mb-4 text-fuchsia-400" for="cat">Category</label>
-            <br/>
-            <select class="py-4 px-4 rounded-xl opacity-90" name="cat">
+            <select class="w-full py-4 px-4 rounded-xl mb-4 opacity-90" name="cat">
                 <option value="clothing">Clothing</option>
                 <option value="food">Food</option>
                 <option value="entertainment">Entertainment</option>
                 <option value="technology">Technology</option>
                 <option value="hygiene">Hygiene</option>
             </select>
-            <br/>
             <div class="flex items-center justify-between">
-                <label class="text-lg mb-4 text-fuchsia-400" for="sDate">Start Date</label>
-                <input class="w-1/5 py-4 rounded-xl mb-4 opacity-90" type="date" name="sDate">
-                <label class="text-lg mb-4 text-fuchsia-400" for="eDate">End Date</label>
-                <input class="w-1/5 py-4 rounded-xl mb-4 opacity-90" type="date" name="eDate">
+                <div class="w-8/17 flex items-center justify-center">
+                    <label class="w-1/5 text-lg mb-4 text-fuchsia-400" for="sDate">Start Date</label>
+                    <input class="w-4/5 ml-3 py-2 rounded-xl mb-4 opacity-90" type="date" name="sDate">
+                </div>
+                <div class="w-8/17 flex items-center justify-center">
+                    <label class="w-1/5 text-lg mb-4 text-fuchsia-400" for="eDate">End Date</label>
+                    <input class="w-4/5 ml-3 py-2 rounded-xl mb-4 opacity-90" type="date" name="eDate">
+                </div>
             </div>
             <label class="text-lg mb-4 text-fuchsia-400" for="limit">Expense Limit ($CAD)</label>
             <input class="w-full py-4 px-4 rounded-xl mb-4 opacity-90" type="number" min="1" name="limit">
-            <br/>
             <label class="text-lg mb-4 text-fuchsia-400" for="note">Note</label>
             <input class="w-full py-4 px-4 rounded-xl mb-4 opacity-90" type="text" name="note">
 
